--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
             <div class="sixteen wide column" id="saddleback-column">
               <p id="saddleback-title">Saddleback College</p>
               <p id="saddleback-degree">Business, Finance</p>
+              <p class="time-here">September, 2018 - Present</p>
               <ul id="saddleback-content">
                 <li>Honors Program</li>
                 <li>3.5 GPA</li>
@@ -71,6 +72,7 @@
             <div class="sixteen wide column" id="uci-column">
               <p id="uci-title">UCI</p>
               <p id="uci-subtitle">Full Stack Coding Boot Camp</p>
+              <p class="time-here">May, 2019 - November, 2019</p>
               <ul id="uci-content">
                 <li>
                   An intensive 24-week long boot camp dedicated to designing and
@@ -95,6 +97,7 @@
             <div class="sixteen wide column" id="experience-column">
               <p id="cafe-title">Manager</p>
               <p id="cafe-subtitle">Cafe Del Sol</p>
+              <p class="time-here">May, 2017 - Present</p>
               <ul id="cafe-content">
                 <li>
                   Maximize efficiency by automating inventory and ordering
