--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
             <div class="sixteen wide column" id="skills-column">
               <p id="skills-title">Skills</p>
               <ul class="skills-content">
-                <li>Languages: Javascript, HTML 5, CSS3, C#</li>
-                <li>Back-end Frameworks: Node.js + Express, .NET</li>
-                <li>Front-end Frameworks: Angular.js, React.js</li>
-                <li>Front-end Libraries: jQuery, Bootstrap, LoDash, Less</li>
-                <li>Databases: Microsoft SQL, MongoDB</li>
+                <li>Languages: Javascript, HTML 5, CSS3</li>
+                <li>Back-end Frameworks: Node.js + Express</li>
+                <li>Front-end Frameworks: React.js</li>
+                <li>Front-end Libraries: jQuery, Bootstrap, LoDash</li>
+                <li>Databases: MySQL, PostgreSQL, MongoDB</li>
                 <li>Misc: Git, GitHub, Visual Studio Code, Visual Studio</li>
               </ul>
             </div>
