--- a/index.html
+++ b/index.html
@@ -47,13 +47,18 @@
         <div class="sixteen wide column" id="about-column">
           <p id="about-title">About</p>
           <p id="about-text">
-            Full-stack developer proficient with the MERN stack. Is an Eagle
-            Scout. Leadership and management experience, responsive web design,
-            Adobe Creative Suite, full stack web development, Adobe Photoshop,
-            Adobe Illustrator, excellent oral and written communication skills.
+            Full stack web developer skilled in web technologies (HTML/CSS,
+            Javascript/jQuery, Node.js, Express.js, Passport.js, MySql,
+            Postgresql, MongoDB, React) and mobile technologies (React Native).
+            Along with my ardor for dry programming I am a photographer with an
+            eye for aesthetics that has driven my journey as a developer.
+            Looking for a place to work where I can contribute my skills while
+            growing as a developer.
           </p>
         </div>
-        <div class="eight wide computer sixteen wide tablet sixteen wide mobile column">
+        <div
+          class="eight wide computer sixteen wide tablet sixteen wide mobile column"
+        >
           <div class="ui compact grid container">
             <div class="sixteen wide column">
               <p id="education-title">Education</p>
@@ -89,7 +94,9 @@
             </div>
           </div>
         </div>
-        <div class="eight wide computer sixteen wide tablet sixteen wide mobile column">
+        <div
+          class="eight wide computer sixteen wide tablet sixteen wide mobile column"
+        >
           <div class="ui compact grid container">
             <div class="sixteen wide column">
               <p id="experience-title">Experience</p>
@@ -134,7 +141,10 @@
           <div class="sixteen wide column" id="projects-title-column">
             <p id="projects-title">Projects</p>
           </div>
-          <div class="six wide computer sixteen wide tablet sixteen wide mobile column projects-column" id="vision-column">
+          <div
+            class="six wide computer sixteen wide tablet sixteen wide mobile column projects-column"
+            id="vision-column"
+          >
             <p id="vision-title" class="projects-inner-title">
               Brew
             </p>
@@ -152,7 +162,10 @@
               <li>Mobile: https://github.com/ericmackensen/Brew</li>
             </ul>
           </div>
-          <div class="five wide computer sixteen wide tablet sixteen wide mobile column projects-column" id="vision-column">
+          <div
+            class="five wide computer sixteen wide tablet sixteen wide mobile column projects-column"
+            id="vision-column"
+          >
             <p id="vision-title" class="projects-inner-title">
               Vision
             </p>
@@ -170,7 +183,10 @@
               <li>https://ryanh899.github.io/project-1/</li>
             </ul>
           </div>
-          <div class="five wide computer sixteen wide tablet sixteen wide mobile column projects-column" id="vision-column">
+          <div
+            class="five wide computer sixteen wide tablet sixteen wide mobile column projects-column"
+            id="vision-column"
+          >
             <p id="vision-title" class="projects-inner-title">
               Book-Search
             </p>
