edited about section

--- a/index.html
+++ b/index.html
@@ -48,12 +48,11 @@
           <p id="about-title">About</p>
           <p id="about-text">
             Full stack web developer skilled in web technologies (HTML/CSS,
-            Javascript/jQuery, Node.js, Express.js, Passport.js, MySql,
-            Postgresql, MongoDB, React) and mobile technologies (React Native).
-            Along with my ardor for dry programming I am a photographer with an
-            eye for aesthetics that has driven my journey as a developer.
-            Looking for a place to work where I can contribute my skills while
-            growing as a developer.
+            Javascript/jQuery, Node.js + Express, SQL/noSQL Databases, React)
+            and mobile technologies (React Native). Along with my ardor for dry
+            programming I am a photographer with an eye for aesthetics that has
+            driven my journey as a developer. Looking for a place to work where
+            I can contribute my skills while growing as a developer.
           </p>
         </div>
         <div
