bolded headers and updated skills

--- a/index.html
+++ b/index.html
@@ -13,10 +13,7 @@
     />
     <script src="https://cdn.jsdelivr.net/npm/fomantic-ui@2.7.8/dist/semantic.min.js"></script>
     <link href="./styles.css" type="text/css" rel="stylesheet" />
-    <link
-      href="https://fonts.googleapis.com/css?family=Roboto:100,300,400&display=swap"
-      rel="stylesheet"
-    />
+    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500&display=swap" rel="stylesheet">
   </head>
   <body>
     <div class="ui vertically divided grid container" id="page-container">
@@ -62,17 +59,6 @@
             <div class="sixteen wide column">
               <p id="education-title">Education</p>
             </div>
-            <div class="sixteen wide column" id="saddleback-column">
-              <p id="saddleback-title">Saddleback College</p>
-              <p id="saddleback-degree">Business, Finance</p>
-              <p class="time-here">September, 2018 - Present</p>
-              <ul id="saddleback-content">
-                <li>Honors Program</li>
-                <li>3.5 GPA</li>
-                <li>Honor Roll Recipient</li>
-                <li>Participated in Community Service Outreach</li>
-              </ul>
-            </div>
             <div class="sixteen wide column" id="uci-column">
               <p id="uci-title">UCI</p>
               <p id="uci-subtitle">Full Stack Coding Boot Camp</p>
@@ -89,6 +75,17 @@
                 <li>Deployment</li>
                 <li>Quality Assurance</li>
                 <li>Server Side Development (Node.js, Express, MERN Stack)</li>
+              </ul>
+            </div>
+            <div class="sixteen wide column" id="saddleback-column">
+              <p id="saddleback-title">Saddleback College</p>
+              <p id="saddleback-degree">Business, Finance</p>
+              <p class="time-here">September, 2018 - Present</p>
+              <ul id="saddleback-content">
+                <li>Honors Program</li>
+                <li>3.5 GPA</li>
+                <li>Honor Roll Recipient</li>
+                <li>Participated in Community Service Outreach</li>
               </ul>
             </div>
           </div>
@@ -109,28 +106,34 @@
                   Maximize efficiency by automating inventory and ordering
                 </li>
                 <li>
-                  Streamlined communication by implementing effective ordering
-                  systems
+                  Increased sales by 200% by streamlining everyday processes for
+                  efficiency
                 </li>
                 <li>
-                  Optimized on-site process to ensure high team performance
+                  Used strong communication skills to establish positive
+                  relationships with guests and employees
                 </li>
                 <li>
-                  Played an integral part in generating 200% increase in sales
-                  within the first month
+                  Developed and maintained exceptional customer service
+                  standards
                 </li>
               </ul>
             </div>
             <div class="sixteen wide column" id="skills-column">
-              <p id="skills-title">Skills</p>
-              <ul class="skills-content">
-                <li>Languages: Javascript, HTML 5, CSS3</li>
-                <li>Back-end Frameworks: Node.js + Express</li>
-                <li>Front-end Frameworks: React.js</li>
-                <li>Front-end Libraries: jQuery, Bootstrap, LoDash</li>
-                <li>Databases: MySQL, PostgreSQL, MongoDB</li>
-                <li>Misc: Git, GitHub, Visual Studio Code, Visual Studio</li>
-              </ul>
+              <p id="skills-title">Technical Skills</p>
+              <p class="skills-headers" >Languages</p>
+              <p>Javascript, HTML 5, CSS3, C#</p>
+              <p class="skills-headers" >Libraries + Frameworks</p>
+              <p>
+                React.js, Node.js, Express.js, .Net, jQuery, Bootstrap, Material
+                UI, Semantic UI, Mongoose, Knex, Sequelize, Formik, Passport.js,
+                AJAX, axios
+              </p>
+              <p class="skills-headers" >Other</p>
+              <p>
+                MySQl, PostgreSQL, MongoDB, Git, GitHub, Visual Studio Code,
+                Visual Studio, RestfulAPIs
+              </p>
             </div>
           </div>
         </div>
